--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head> 
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>Егор Батьков</title>
+	<title>Домашняя работа</title>
 	<link rel="stylesheet" href="main.css">
 	<link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
